runit 1.0.2
Mon, 29 Mar 2004 17:52:50 +0000
  * man/svlogd.8: timestamps are not considered when matching patterns (thx
    Andras KORN).
  * runsv.c: on exit run the finish scripts when taking the service down
    (thx X.).
  * runsv.c, runsvctrl.c: handle sig_quit (thx Wayne Marshall).
  * svlogd.c: don't crash on zero byte long config file (thx Alex Efros).
  * man/*: minor cleanup.
  * doc/index.html: add link to runit on linuxfromscratch doc (thx Richard
    A Downing FBCS).

runit 1.0.1
Sun, 07 Mar 2004 10:40:40 +0000
  * doc/usedietlibc.html: minor.
  * fmt_ptime.c: create timestamps in UTC, not localtime.
  * chpst.c: -e dir: silently ignore directories, print warning if verbose.
  * runsv.c: allow also log/supervise to be a dangling symlink; more
    meaningful error message if opening lock or locking fails.
  * check-diff, check-dist, check-local, package/check: new; run checks on
    programs.
  * package/install: run package/check.
  * chpst.check, runit-init.check, runit.check, runsv.check,
    runsvchdir.check, runsvctrl.check, runsvdir.check, runsvstat.check,
    svlogd.check, svwaitdown.check, svwaitup.check, utmpset.check: new;
    check program.
  * chpst.dist, runit-init.dist, runit.dist, runsv.dist, runsvchdir.dist,
    runsvctrl.dist, runsvdir.dist, runsvstat.dist, svlogd.dist,
    svwaitdown.dist, svwaitup.dist, utmpset.dist: new; dist check program
    output.

runit 1.0.0
Tue, 10 Feb 2004 13:37:28 +0000
  * doc/benefits.html, doc/dependencies.html, doc/index.html,
    doc/replaceinit.html, doc/runlevels.html, doc/upgrade.html,
    doc/useinit.html: cleanup; minor.
  * man/utmpset.8: run utmpset in finish script, not run script.
  * man/runsvdir.8: minor.

runit 0.13.1
Mon, 19 Jan 2004 18:32:58 +0000
  * doc/upgrade.html: typo.
  * svlogd.c: bugfix: properly print new-line character to the log on end
    of line (thx Pawel Chmielowski).
  * trysocketlib.c: new; check for libraries needed for socket() on some